# mmpassword

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_en.md  README_zh.md  package-lock.json  package.json  release.sh  server.md  tailwind.config.js
.github/workflows/: build.yml
PRd/: mmpassword-prd.md  mmpassword-ui-design.md
design/p01_welcome_screen/: code.html
design/p02_unlock_screen/: code.html
design/p03_main_interface/: code.html
design/p04_edit_mode/: code.html
design/p08_new_vault/: code.html
design/p09_open_vault_selection/: code.html
design/p10_github_connection/: code.html
server/: Cargo.toml  build.sh  config.toml
server/src/: config.rs  crypto.rs  db.rs  error.rs  main.rs  models.rs  static_files.rs
server/src/handlers/: admin_entry.rs  admin_group.rs  admin_subscription.rs  mod.rs  subscription.rs
server/src/middleware/: auth.rs
server/web/: index.html  package-lock.json
server/web/src/: App.tsx  index.css  types.ts
server/web/src/api/: client.ts  entries.ts  groups.ts  subscriptions.ts
server/web/src/components/: ConfirmDialog.tsx  EntryForm.tsx  EntrySelector.tsx  FieldEditor.tsx  GroupForm.tsx  IconPicker.tsx  SubscriptionForm.tsx  Toast.tsx
server/web/src/pages/: EntriesPage.tsx  GroupsPage.tsx  SubscriptionsPage.tsx
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: entry.rs  git_config.rs  git_vault.rs  group.rs  mod.rs  subscription.rs  totp.rs  vault.rs
src-tauri/src/crypto/: cipher.rs  kdf.rs  mod.rs  random.rs
src-tauri/src/git/: mod.rs  operations.rs  repository.rs  ssh_config.rs  sync.rs
src-tauri/src/models/: entry.rs  field.rs  git_meta.rs  group.rs  mod.rs  subscription_meta.rs  vault.rs
src-tauri/src/storage/: config.rs  mod.rs  vault_file.rs
src-tauri/src/sync/: conflict.rs  engine.rs  mod.rs
src-tauri/testvalut/: test
src/hooks/: useAutoLock.ts  useNavigationGuard.ts
src/i18n/: index.ts  translations.ts
src/lib/: fieldBatch.ts  fieldDefaults.ts  fieldDrag.ts
test/: test.mmp  test123.mmp
(+99 files in other folders)
