[package]
name = "mmpassword-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v5"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
argon2 = "0.5"
chacha20poly1305 = "0.10"
base64 = "0.22"
rand = "0.8"
tower-http = { version = "0.5", features = ["cors"] }
tower = "0.4"
rust-embed = "8"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
